fix sidebar section title 's' and help-icon alignment in firefox

--- a/portiaui/app/styles/components/side-bar.scss
+++ b/portiaui/app/styles/components/side-bar.scss
@@ -32,7 +32,12 @@
     }
 
     .title {
+        display: flex;
         line-height: $tree-list-row-height;
+
+        .help-icon {
+            margin-left: $space-width;
+        }
 
         .animation-container {
             &.inline {
